try COOP and COEP headers

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
+      crossorigin
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,600;1,700&display=swap"
       rel="stylesheet"
+      crossorigin
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
